RESOLVED FIXED300830
[JSC] Missing early return after performPromiseThen
https://bugs.webkit.org/show_bug.cgi?id=300830
Summary [JSC] Missing early return after performPromiseThen
Yusuke Suzuki
Reported 2025-10-15 13:45:00 PDT
...
Attachments
Yusuke Suzuki
Comment 1 2025-10-15 13:45:01 PDT
Yusuke Suzuki
Comment 2 2025-10-15 13:46:05 PDT
EWS
Comment 3 2025-10-15 15:12:59 PDT
Committed 301585@main (6765125ae39a): <https://commits.webkit.org/301585@main> Reviewed commits have been landed. Closing PR #52417 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.