[JSC] Missing early return after performPromiseThen https://bugs.webkit.org/show_bug.cgi?id=300830 rdar://162622481

Reviewed by Yijia Huang and Keith Miller.

301454@main accidentally removed early return after performPromiseThen.
This recovers that change.

Test: JSTests/stress/perform-promise-then-does-not-cause-exception.js

* JSTests/stress/perform-promise-then-does-not-cause-exception.js: Added.
(try.fn0):
(try.v0.new.Promise):
(try.fn3):
(try.catch):
* Source/JavaScriptCore/runtime/JSMicrotask.cpp:
(JSC::promiseResolveThenableJobFastSlow):
(JSC::promiseResolveThenableJobWithoutPromiseFastSlow):

Canonical link: https://commits.webkit.org/301585@main